Ensure NOTIFY message has a proper SID

SID must start with "uuid:" and has to have some value (the uuid
format was only specified in version 1.1 so that cannot be enforced).

https://bugzilla.gnome.org/show_bug.cgi?id=696289